--- a/qbittorrent/config.json
+++ b/qbittorrent/config.json
@@ -4,7 +4,7 @@
     "amd64",
     "armv7"
   ],
-  "codenotary": "alexandrep.github@gmail.com",
+  "codenotary": "tibor.jaszi@gmail.com",
   "description": "qBittorrent is a bittorrent client",
   "devices": [
     "/dev/net/tun",
@@ -86,7 +86,7 @@
     "DNS_server": "8.8.8.8,1.1.1.1",
     "PGID": "0",
     "PUID": "0",
-    "SavePath": "/share/qBittorrent",
+    "SavePath": "/mnt/sdb2/downloads",
     "Username": "admin",
     "certfile": "fullchain.pem",
     "customUI": "vuetorrent",
@@ -143,6 +143,6 @@
   },
   "slug": "qbittorrent",
   "udev": true,
-  "url": "https://github.com/alexbelgium/hassio-addons",
+  "url": "https://github.com/TiborJaszi/hassio-addons",
   "version": "4.6.3-4"
 }
